--- a/main.css
+++ b/main.css
@@ -9,23 +9,28 @@ body {
  position: relative;
 }
 
-.menu {
+.menu{
+
 display: inline;
 font-size: 110%;
 color: white;
 font-family: 'Noto Sans JP';
 margin-left: 1.5rem;
 cursor: pointer;
+}
 
+.menu a {
+text-decoration: none;
+color: white;
 }
 
 .menuPosition {
-position: absolute;
+position: fixed;
 left: 50%;
-top: 15%;
+top: 5%;
 }
 
-.menu:hover {
+.menu a:hover {
   color: purple;
 }
 
@@ -34,8 +39,8 @@ width: 15%;
 height: 15%;
 border-radius: 50%;
 display: block;
+clear: both;
 padding: 10%;
-
 }
 
 .naslov {
@@ -45,8 +50,31 @@ padding: 10%;
     color: white;
     font-weight: bold;
 }
+
 header h1 {
   font-size: 5.5em;
   font-family: 'Shadows Into Light'
+}
+
+/*
+.imgAboutMe {
+  height: 20%;
+  width: 20%;
+  float left;
+  clear: both;
+  margin-top: 15%;
+} */
+section {
+  margin-left: 0%;
+  width: 70%;
+  margin: 20% auto 0;
+  text-align: left;
+  line-height: 1.5;
+  color: white;
+}
+.imgAboutMe {
+  width: 30%;
+  float: left;
+  margin-right: 1.5rem;
 
 }
