--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+:root {
+  --color1: #51eaea;
+  --color2: black;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,10 +14,11 @@ body {
  position: relative;
 }
 nav {
-width: 100%;
-height: 7vh;
-background: green;
 position: fixed;
+width: 100%;
+height: 2.7rem;
+background: var(--color1);
+
 
 
 
