--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 :root {
-  --color1: #51eaea;
-  --color2: black;
+  --color1: white;
+  --color2: gray;
 }
 
 * {
@@ -10,23 +10,26 @@
 
 }
 body {
- background-color: #51eaea;
+
  position: relative;
 }
+header{
+
+  background-color: white;
+  height: 700px;
+}
+
 nav {
 position: fixed;
 width: 100%;
-height: 2.7rem;
+height: 3.1rem;
 background: var(--color1);
-
-
-
 
 }
 
 .menuPosition{
 display: flex;
-margin-left: 60%;
+margin-left: 50%;
 list-style-type: none;
 margin-top: 0.7%;
 }
@@ -34,10 +37,10 @@ margin-top: 0.7%;
 .menu a {
 text-decoration: none;
 cursor: pointer;
-color: white;
+color: black;
 font-family: 'Noto Sans JP';
 margin-left: 1.5rem;
-font-size: 1.2rem;
+font-size: 1.5em;
 }
 
 
@@ -47,7 +50,7 @@ font-size: 1.2rem;
 
 .logo {
 width: 15%;
-height: 15%;
+height: 20%;
 border-radius: 50%;
 display: block;
 clear: both;
@@ -59,10 +62,8 @@ margin-left: 5%;
     text-align: center;
     font-family: 'Poiret One';
     font-size: 1.4em;
-    color: white;
+    color: black;
     font-weight: bold;
-
-
 }
 
 header h1 {
@@ -78,16 +79,16 @@ header h1 {
   clear: both;
   margin-top: 15%;
 } */
-article{
-  margin-top: 30%;
+article {
+background-color: #867979;
 }
 section {
   margin-left: 0%;
   width: 80%;
-  margin: 10% auto 0;
+  margin: 0 auto 0;
   text-align: left;
   line-height: 1.5;
-  color: white;
+  color: black;
   font-family: 'Comic Sans MS';
   font-weight: lighter;
   text-align: justify;
@@ -95,15 +96,25 @@ section {
 .imgAboutMe {
   width: 30%;
   float: left;
-  margin-right: 1.5rem;
+  margin-right: 0.5rem;
+
 
 }
-#learned {
+#imglearned {
   border-radius: 20%;
   width: 25%;
   height: 25%;
 }
-#learning {
+#imglearning {
   border-radius: 5%;
 
+}
+
+footer {
+  background-color: #30e3ca;
+
+}
+footer h1 {
+  text-align: center;
+  font-family: 'Comic Sans MS';
 }
